erDiagram
    DEPARTMENTS {
        uuid id PK
        string name UK
        uuid parent_id FK
    }
    USERS {
        uuid id PK
        string name
        string email UK
        string password_hash
        enum role
        uuid department_id FK
        enum status
        datetime created_at
    }
    DOCUMENTS {
        uuid id PK
        string title
        string type
        uuid owner_id FK
        enum classification
        enum sensitivity
        datetime created_at
    }
    DOCUMENT_VERSIONS {
        uuid id PK
        uuid document_id FK
        string version_label
        string hash UK
        datetime uploaded_at
        enum status
    }
    FILES {
        uuid id PK
        uuid version_id FK
        string object_key UK
        string mime_type
        int size
        enum malware_status
    }
    PAGES {
        uuid id PK
        uuid version_id FK
        int page_no
        string image_key
        text ocr_text
        float ocr_confidence
    }
    CHUNKS {
        uuid id PK
        uuid version_id FK
        uuid page_id FK
        text text
        string embedding_ref
        json access_scope
    }
    EXTRACTED_FACTS {
        uuid id PK
        uuid version_id FK
        string field
        text value
        json source_span
        float confidence
        enum reviewer_state
    }
    ACTIONS {
        uuid id PK
        uuid source_version_id FK
        string title
        uuid owner_id FK
        datetime due_at
        enum priority
        enum status
    }
    ACTION_EVENTS {
        uuid id PK
        uuid action_id FK
        uuid actor_id FK
        enum event_type
        datetime timestamp
        json detail
    }
    ALERTS {
        uuid id PK
        uuid source_version_id FK
        enum priority
        json reason_codes
        enum routing_state
    }
    ASSIGNMENTS {
        uuid id PK
        uuid alert_id FK
        uuid action_id FK
        uuid assignee_id FK
        uuid assigned_by FK
    }
    COMPARISONS {
        uuid id PK
        uuid old_version_id FK
        uuid new_version_id FK
        enum status
    }
    CHANGES {
        uuid id PK
        uuid comparison_id FK
        enum change_type
        json old_span
        json new_span
        enum impact
    }
    AUDIT_EVENTS {
        uuid id PK
        uuid actor_id FK
        string event_type
        string object_type
        uuid object_id
        datetime timestamp
        string hash
    }
    FEEDBACK {
        uuid id PK
        uuid prediction_id
        uuid reviewer_id FK
        text correction
        enum reason
    }

    DEPARTMENTS ||--o{ DEPARTMENTS : parent_of
    DEPARTMENTS ||--o{ USERS : contains
    USERS ||--o{ DOCUMENTS : owns
    DOCUMENTS ||--o{ DOCUMENT_VERSIONS : has_immutable_versions
    DOCUMENT_VERSIONS ||--o{ FILES : stores
    DOCUMENT_VERSIONS ||--o{ PAGES : contains
    DOCUMENT_VERSIONS ||--o{ CHUNKS : indexes
    PAGES ||--o{ CHUNKS : segments
    DOCUMENT_VERSIONS ||--o{ EXTRACTED_FACTS : yields
    DOCUMENT_VERSIONS ||--o{ ACTIONS : sources
    USERS ||--o{ ACTIONS : owns
    ACTIONS ||--o{ ACTION_EVENTS : records
    USERS ||--o{ ACTION_EVENTS : performs
    DOCUMENT_VERSIONS ||--o{ ALERTS : triggers
    ALERTS ||--o{ ASSIGNMENTS : routes
    ACTIONS ||--o{ ASSIGNMENTS : routes
    USERS ||--o{ ASSIGNMENTS : receives
    DOCUMENT_VERSIONS ||--o{ COMPARISONS : old_version
    DOCUMENT_VERSIONS ||--o{ COMPARISONS : new_version
    COMPARISONS ||--o{ CHANGES : contains
    USERS ||--o{ AUDIT_EVENTS : causes
    USERS ||--o{ FEEDBACK : submits
